# snapcpp

./: .gitignore  .gitmodules  BZR.txt  CMakeLists.txt  GIT.txt  LICENSE  README.md  TODO.md  advgetopt_1.0.0-1.dsc  build-coverity  build-package  build-snap  build-source-package  controlledvars_1.3.4-1.dsc  launchpad.txt  libqtcassandra_0.5.0-1.dsc  libqtserialization_0.1.0-1.dsc  libtld_1.3.1.dsc  libtld_1.4.1-1.dsc  snap-ubuntu-packages  snapcmakemodules_1.0.0-1.dsc  snapwebsites_0.1.0-1.dsc  snapwebsites_0.1.12~saucy.dsc  snapwebsites_0.1.12~saucy_source.build  snapwebsites_0.1.12~saucy_source.ppa.upload  static-check.sh  stats.sh
advgetopt/: CMakeLists.txt
advgetopt/cmake/: CMakeLists.txt
advgetopt/debian/: README.Debian  advgetopt.doc-base.EX  changelog  control  libadvgetopt-doc.install  libadvgetopt.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  shlibs.local  watch.ex
advgetopt/doc/: CMakeLists.txt  advgetopt.doxy.in
advgetopt/src/: CMakeLists.txt  advgetopt.cpp  advgetopt.h  advgetopt.h.in  compatibility.h  memfile.h
advgetopt/tests/: CMakeLists.txt  unittest_advgetopt.cpp  unittest_main.cpp  unittest_main.h
as2js/lib/: CMakeLists.txt  class.cpp  compiler.cpp  compiler_attributes.cpp  compiler_class.cpp  compiler_compile.cpp  compiler_directive.cpp  compiler_expression.cpp  compiler_function.cpp  compiler_package.cpp  compiler_program.cpp  compiler_statement.cpp  compiler_variable.cpp  db.cpp  db.h  json.cpp  lexer.cpp  message.cpp  node.cpp  node_attribute.cpp  node_compare.cpp  node_convert.cpp  node_display.cpp  node_flag.cpp  node_lock.cpp  node_operator.cpp  node_param.cpp  node_tree.cpp  node_type.cpp  node_value.cpp  optimizer.cpp  optimizer_additive.ci  optimizer_assignments.ci  optimizer_bitwise.ci  optimizer_compare.ci  optimizer_compare.cpp  optimizer_conditional.ci  optimizer_equality.ci  optimizer_logical.ci  optimizer_match.ci  (+30 more)
as2js/src/: CMakeLists.txt  as2js.cpp  class.cpp  compile.cpp  compiler.cpp  data.cpp  directive.cpp  expression.cpp  function.cpp  input.cpp  json.cpp  lexer.cpp  license.cpp  license.h  message.cpp  node.cpp  optimizer.cpp  options.cpp  package.cpp  parser.cpp  position.cpp  pragma.cpp  program.cpp  statement.cpp  stream.cpp  string.cpp  variable.cpp
as2js/tests/: CMakeLists.txt  json_to_string.cpp  test_as2js_compiler.cpp  test_as2js_compiler.h  test_as2js_compiler_class.json  test_as2js_compiler_enum.json  test_as2js_db.cpp  test_as2js_db.h  test_as2js_float64.cpp  test_as2js_float64.h  test_as2js_int64.cpp  test_as2js_int64.h  test_as2js_json.cpp  test_as2js_json.h  test_as2js_lexer.cpp  test_as2js_lexer.h  test_as2js_main.cpp  test_as2js_main.h  test_as2js_message.cpp  test_as2js_message.h  test_as2js_node.cpp  test_as2js_node.h  test_as2js_node_data.ci  test_as2js_node_display.cpp  test_as2js_optimizer.cpp  test_as2js_optimizer.h  test_as2js_optimizer_additive.json  test_as2js_optimizer_assignments.json  test_as2js_optimizer_bitwise.json  test_as2js_optimizer_compare.json  test_as2js_optimizer_conditional.json  test_as2js_optimizer_equality.json  test_as2js_optimizer_logical.json  test_as2js_optimizer_match.json  test_as2js_optimizer_multiplicative.json  test_as2js_optimizer_relational.json  test_as2js_optimizer_statements.json  test_as2js_options.cpp  test_as2js_options.h  test_as2js_parser.cpp  (+22 more)
cassview/: CMakeLists.txt
cassview/debian/: cassview.install  changelog  control
cassview/src/: AboutDialog.cpp  AboutDialog.ui  CMakeLists.txt  CassandraModel.cpp  CassandraModel.h  ContextModel.cpp  ContextModel.h  DisplayException.h  InputDialog.h  InputDialog.ui  KeyspaceModel.cpp  KeyspaceModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QueryModel.cpp  QueryModel.h  RowModel.cpp  RowModel.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  TableModel.cpp  main.cpp  (+3 more)
cmake/: 00-common.cmake  CMakeLists.txt  INSTALL.txt  LICENSE.txt  README.txt  doxygen.cmake  log4cplus.cmake  readme.debian  thrift.cmake
controlled_vars/: CMakeLists.txt  config.h.in  controlled_vars.cpp  controlled_vars_version.h.in  index.html
googlerank/: CMakeLists.txt  googlepagerank.cpp  googlepagerank.h  googlepagerank_http.cpp  googlepagerank_http.h  pagerank.cpp  qobject.h
iplock/: CMakeLists.txt  iplock.cpp
libQtCassandra/: CMakeLists.txt  INSTALL.txt  LICENSE.txt  README.txt  config.h.in  thrift-gencpp-cassandra
libQtSerialization/: CMakeLists.txt  LICENSE.txt
libtld/: CMakeLists.txt  ChangeLog  INSTALL.txt  LICENSE.txt  README.md  README.txt
package/: CMakeLists.txt
snapCMakeModules/: 00-common.cmake  CMakeLists.txt  FindAdvGetOpt.cmake  FindControlledVars.cmake  FindLibTLD.cmake  FindQtCassandra.cmake  FindQtSerialization.cmake  FindSnapBuild.cmake  FindSnapCMakeModules.cmake  FindSnapDoxygen.cmake  FindSnapQt.cmake  FindThrift.cmake  Findlog4cplus.cmake  README.txt  doxygen.cmake  qt.cmake  readme.debian
snapbuilder/: CMakeLists.txt  README.md  TODO.md  TODO.txt  mk  releases  series  snapcpp
snapmanager/: CMakeLists.txt  DomainModel.cpp  DomainModel.h  README.txt  RowModel.cpp  RowModel.h  TableModel.cpp  TableModel.h  WebsiteModel.cpp  WebsiteModel.h  get_child.h  row_model.cpp  row_model.h  snap-manager-about.cpp  snap-manager-about.h  snap-manager-createcontext.cpp  snap-manager-createcontext.h  snap-manager-createcontextbox.ui  snap-manager-decode-utf8.h  snap-manager-help.cpp  snap-manager-help.h  snap-manager-initialize-website.cpp  snap-manager-initialize-website.h  snap-manager-initialize-websitebox.ui  snap-manager-mainwindow.ui  snap-manager-resources.qrc  snap-manager.cpp  snap-manager.h  table_model.cpp  table_model.h
snapmanagercgi/: CMakeLists.txt
snapwatchdog/: CMakeLists.txt
snapwebsites/: CMakeLists.txt  INSTALL.txt  README.txt  dougs-reset-db.sh  log.conf  my_server.conf  repair-cassandra  reset-db-local.sh  reset-db.sh  run-server.sh  snapserver.conf  start  stop  tags  xml.cmake  xml_target.cmake
thrift/: CMakeLists.txt  NEWS  README
zipios/: CMakeLists.txt  CMakeLists.txt.save  Makefile.in  acinclude.m4  aclocal.m4  configure  patch-stamp  zipios.doxy.in
(+3918 files in other folders)
